Testimonial widget - Fixed a few slider layout issues. (cherry picked from commit f10d0d0)

--- a/widgets/so-testimonial-widget/styles/style_one.less
+++ b/widgets/so-testimonial-widget/styles/style_one.less
@@ -1,7 +1,7 @@
 @import "../../../less/mixins";
 
 .sow-testimonial-item {
-    padding: 5px 20px;
+    padding: 5px 0px;
 
     .sow-testimonial-image-wrapper {
         text-align: center;
@@ -17,6 +17,7 @@
 }
 
 .sow-testimonial-text-background {
+    margin: 0px 20px;
     position: relative;
     background: white;
     overflow: visible;
