--- a/widgets/so-testimonial-widget/styles/style_two.less
+++ b/widgets/so-testimonial-widget/styles/style_two.less
@@ -1,7 +1,6 @@
 @import "../../../less/mixins";
 
 .sow-testimonial-item {
-    padding: 5px 20px;
 
     .sow-testimonial-image-wrapper {
         text-align: center;
